--- a/css/style.css
+++ b/css/style.css
@@ -34,22 +34,18 @@ a{
 }
 .main-header{
     display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    box-sizing: border-box;
 
     min-width: 900px;
     max-width: 1200px;
     margin: 0 auto;
+	
+    padding-left: 2.25%;
+    padding-right: 2.25%;
 
     justify-content: center;
-}
-.container-header{
-    display: flex;
-    flex-direction: column;
-
-    width: 95.5%;
-    margin: 0 auto;
-    margin-bottom: 10px;
-
-    align-items: flex-end;
 }
 .main-navigation{
     display: flex;
