--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ a{
     width: 100%;
 
     justify-content: space-between;
+    align-items: flex-start;
 }
 .main-navigation a{
     color: #ffffff;
@@ -66,7 +67,7 @@ a{
 .site-navigation{
     display: flex;
 
-    margin-top: 25px;
+    margin-top: 20px;
     margin-bottom: 20px;
     padding: 0;
 
@@ -82,8 +83,14 @@ a{
     background-color: #d07058;
 }
 .site-navigation-item > a{
-    margin: 25px;
-
+    display: block;
+    margin-right: 25px;
+    margin-left: 25px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 20px;
     font-weight: bold;
 
     text-decoration: underline;
@@ -95,6 +102,11 @@ a{
 
     color: #333333;
     background-color: #f8f7f4;
+}
+.site-navigation-item > a:active{
+    color: #333333;
+    background-color: rgba(248, 247, 244, 0.988);
+    box-shadow: inset 0px 2px 1px 0px rgba(105, 105, 105, 0.004);
 }
 .site-navigation-sub a{
     font-size: 14px;
@@ -108,6 +120,30 @@ a{
 }
 .site-navigation-sub a:active{
     background-color: #f6b5a5;
+}
+.menu-search{
+    position: relative;
+}
+.menu-search::after{
+    content: "";
+    position: absolute;
+    height: 32px;
+    width: 32px;
+    bottom: 20px;
+    left: -32px;
+    border-radius: 50%;
+    background-color: rgba(248, 247, 244, 0.2);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-image: url("../img/header-loupe-white.svg");
+}
+.user-menu a:hover,
+.menu-search:hover::after{
+    color: #323232;
+    background-color: rgba(248, 247, 244, 1);
+}
+.menu-search:hover::after{
+    background-image: url("../img/header-loupe-black.svg");
 }
 .form input,
 .form-search input{
@@ -126,25 +162,48 @@ a{
 .menu-cart,
 .menu-login{
     display: flex;
+    position: relative;
+}
+.menu-item::after{
+    color: #323232;
+    content: "";
+    position: absolute;
+    height: 32px;
+    width: 32px;
+    bottom: 20px;
+    left: 18px;
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+.menu-item-login::after{
+    background-image: url("../img/header-entrance-white.svg");
+}
+.menu-item-login:hover::after{
+    background-image: url("../img/header-entrance-black.svg");
+}
+.menu-item-cart::after{
+    background-image: url("../img/header-basket-white.svg");
+}
+.menu-item-cart:hover::after{
+    background-image: url("../img/header-basket-black.svg");
 }
 .menu-item{
+    line-height: 16px;
     margin: 20px;
     margin-right: 0;
     margin-left: 10px;
-    padding: 10px;
+    padding: 8px;
     padding-right: 15px;
-    padding-left: 15px;
+    padding-left: 40px;
 
     border-radius: 20px;
     background-color: rgba(248, 247, 244, 0.2);
 }
-.menu-item:hover{
-    color: #323232;
-    background-color: rgba(248, 247, 244, 1);
-}
-.menu-cart .menu-item-cart-full{
-    color: #323232;
-    background-color: #f7f6f3;
+
+.menu-item-cart-full::after,
+.menu-item-cart-full:hover::after{
+    background-image: url("../img/header-basket-red.svg");
 }
 .menu-cart{
     position: relative;
@@ -220,16 +279,12 @@ a{
     text-shadow: 0 2px 5px rgba(160, 32, 11, 0.76);
 }
 .button:hover{
-    background-image:    -moz-linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
-    background-image: -webkit-linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
-    background-image:     -ms-linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
-    box-shadow: 0 2px 2px 0 rgba(172, 16, 0, 0.004);
+    background: linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
+    box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
 }
 .button:active{
-    background-image:    -moz-linear-gradient( 90deg, rgb(242,104,67) 0%, rgb(231,74,53) 100%);
-    background-image: -webkit-linear-gradient( 90deg, rgb(242,104,67) 0%, rgb(231,74,53) 100%);
-    background-image:     -ms-linear-gradient( 90deg, rgb(242,104,67) 0%, rgb(231,74,53) 100%);
-    box-shadow: inset 0 2px 2px 0 rgba(148, 39, 24, 0.004);
+    background: linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
+    box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
 }
 .login-link a{
     font-size: 13px;
@@ -246,7 +301,7 @@ a{
 .main-contacts{
     font-size: 14px;
     line-height: 16px;
-
+    margin: 0;
     color: #ffffff;
 }
 .main-contacts b{
