--- a/css/style.css
+++ b/css/style.css
@@ -76,8 +76,7 @@ a{
 }
 .site-navigation-item > a{
     display: block;
-    margin-right: 25px;
-    margin-left: 25px;
+
     padding-top: 7px;
     padding-bottom: 7px;
     padding-left: 15px;
@@ -297,6 +296,7 @@ a{
     line-height: 16px;
     margin: 0;
     color: #ffffff;
+    text-align: right;
 }
 .main-contacts b{
     font-size: 22px;
