--- a/css/style.css
+++ b/css/style.css
@@ -401,8 +401,41 @@ a{
 }
 .filters-item-price{
     /*временно*/
-    width: 200px;
+    width: 195px;
     height: 22px;
+}
+.filters-item-price-scale{
+    position: relative;
+}
+.scale{
+    height: 4px;
+    width: 176px;
+    background-color: #d1dad3;
+    margin: auto;
+    margin-top: 8px;
+    
+}
+.scale .bar{
+    height: 4px;
+    width: 98px;
+    background-color: #f8f7f4;
+    margin-left: 23px;
+    
+}
+.filters-item-price-toggle{
+    position: absolute;
+    border: 8px solid #f8f7f4;
+    border-radius: 50%;
+    background-color: #ababab;
+    height: 4px;
+    width: 4px;
+    top: 9px;
+}
+.filters-item-price-toggle-min{
+    left: 35px;
+}
+.filters-item-price-toggle-max{
+    left: 135px;
 }
 .richness-list{
     display: flex;
@@ -855,11 +888,6 @@ a{
     padding-right: 19px;
     padding-left: 19px;
 }
-.form-subscribe input{
-    box-sizing: border-box;
-    width: 100%;
-    height: 43px;
-}
 .subscribe input,
 .modal-feedback input,
 .modal-feedback textarea{
@@ -872,6 +900,12 @@ a{
     border: 1px solid #d3d3d2;
     border-radius: 6px;
     background-color: #ffffff;
+}
+.form-subscribe input{
+    box-sizing: border-box;
+    width: 100%;
+    padding: 9px;
+    padding-left: 12px;
 }
 .modal-feedback textarea{
     resize: none;
@@ -893,7 +927,8 @@ a{
 .contacts-container{
     display: flex;
 
-    height: 430px;
+    min-height: 430px;
+    /*высоту через вьюпорт*/
 
     justify-content: flex-end;
     align-items: center;
@@ -1092,7 +1127,7 @@ a{
     top: -40px;
     height: 40px;
     width: 110px;
-    background-image: url(../img/logo-htmlacademy.svg);
+    background-image: url("../img/logo-htmlacademy.svg");
     background-repeat: no-repeat;
 }
 .footer-copyright p{
